fix z-index for Allsearch

--- a/client/app/containers/AllSearch/styles.scss
+++ b/client/app/containers/AllSearch/styles.scss
@@ -11,7 +11,7 @@
     left: 10px;
     width: 500px;
 
-    z-index: 999;
+    z-index: 100000;
     min-height: 10rem;
     background-color: white;
     border: 1px solid;
